Agent_Plateform_Manager/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arm-web
  namespace: arm-stage1
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: arm-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
