Agent_Plateform_Manager/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arm-web
  namespace: arm-stage1
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: arm-web
      port:
        number: 80
